<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Launcher3</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="home_screen">Home screen</string>
    <string name="custom_actions">Custom actions</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="place_automatically">Add automatically</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_loading_message">Loading apps&#8230;</string>
    <string name="all_apps_no_search_results">No apps found matching \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="notifications_header">Notifications</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g id="app_name" example="Launcher3">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="msg_no_external_storage_permission"><xliff:g id="app_name" example="Launcher3">%1$s</xliff:g> is not allowed to access external storage</string>
    <string name="msg_no_write_settings_permission"><xliff:g id="app_name" example="Launcher3">%1$s</xliff:g> is not allowed to write settings</string>
    <string name="msg_no_overlay_permission"><xliff:g id="app_name" example="Launcher3">%1$s</xliff:g> is not allowed to draw an overlay on top of other apps</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g id="app_name" example="Messenger">%1$s</xliff:g></string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="profiles_button_text">Profiles</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="accessibility_action_overview">Overview</string>
    <string name="allow_rotation_title">Allow Home screen rotation</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_blocked_desc">Current Display setting doesn\'t permit rotation</string>
    <string name="icon_badging_title">Notification dots</string>
    <string name="hide_foreign_notifications_title">Hide notifications</string>
    <string name="hide_all_notifications_title">Hide all notifications</string>
    <string name="hide_foreign_notifications_summary">From apps not on your homescreen</string>
    <string name="hide_all_notifications_summary">Hide all incoming notifications</string>
    <string name="grayscale_summary">Link to accessibility settings. Go to Visibility Improvements > Color adjustment > Greyscale</string>
    <string name="enable_grayscale_title">Enable Grayscale Mode</string>
    <string name="add_new_profile">Add new Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_name_summary">Give this profile a name</string>
    <string name="save">"Save"</string>
    <string name="cancel">"Cancel"</string>
    <string name="delete">"Delete"</string>
    <string name="icon_badging_desc_on">On</string>
    <string name="icon_badging_desc_off">Off</string>
    <string name="title_missing_notification_access">Notification access needed</string>
    <string name="title_missing_grayscale_access">Grayscale access needed </string>
    <string name="title_manually_select_profile">Manually activate profile</string>
    <string name="title_add_profile_name">Save name of new profile</string>
    <string name="msg_missing_notification_access">To show Notification Dots, <xliff:g id="name" example="My App">%1$s</xliff:g> needs access to notifications</string>
    <string name="msg_missing_grayscale_access">To enable Grayscale Mode, <xliff:g id="name" example="My App">%1$s</xliff:g> needs access to grayscale</string>
    <string name="msg_missing_notification_access_for_blocking">To be able to block notifications from apps not on this profile\'s homescreen, <xliff:g id="name" example="My App">%1$s</xliff:g> needs access to notifications</string>
    <string name="title_change_settings">Change settings</string>
    <string name="auto_add_shortcuts_label">Add icon to Home screen</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="icon_shape_override_label">Change icon shape</string>
    <string name="icon_shape_system_default">Use system default</string>
    <string name="icon_shape_square">Square</string>
    <string name="icon_shape_squircle">Squircle</string>
    <string name="icon_shape_circle">Circle</string>
    <string name="icon_shape_teardrop">Teardrop</string>
    <string name="icon_shape_cylinder">Cylinder</string>
    <string name="icon_shape_override_progress">Applying icon shape changes</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> downloading, <xliff:g id="progress" example="30%">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> waiting to install</string>
    <string name="widgets_bottom_sheet_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> widgets</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g id="number" example="1">%1$s</xliff:g> column <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="pref_icon_pack">Icon pack</string>
    <string name="smartspace_preferences_in_settings">At A Glance</string>
    <string name="smartspace_preferences_in_settings_desc">At the top of your Home screen</string>
    <string name="title_show_google_app">Display %1$s</string>
    <string name="pref_show_google_now_summary">@string/msg_minus_one_on_left</string>
    <string name="about">About</string>
    <string name="profiles">Profiles</string>
    <string name="profile_work">Work</string>
    <string name="profile_home">Home</string>
    <string name="profile_disconnected">Disconnected</string>
    <string name="profile_default">Default</string>
    <string name="profile_pref_wallpaper">Wallpaper</string>
    <string name="profile_pref_ringtone">Ringtone</string>
    <string name="profile_pref_ssids">Associated WiFi Networks</string>
    <string name="profile_pref_ssids_hint">This profile is active while connected to one of the provided WiFis. One line per entry.</string>
    <string name="profile_pref_ssids_disconnected">WiFi</string>
    <string name="profile_pref_ssids_disconnected_summary">This profile is active when in offline mode</string>
    <string name="profile_pref_ssids_default">WiFi</string>
    <string name="profile_pref_ssids_default_summary">This profile is active if the requirements of no other profile are met</string>
    <string name="title_app_suggestions">Display app suggestions</string>
    <string name="summary_app_suggestions">At the top of your All Apps list</string>
    <string name="about_app_version">Version</string>
    <string name="app_releases_url">https://play.google.com/store/apps/details?id=amirz.rootless.nexuslauncher</string>
    <string name="app_donate_url">https://play.google.com/store/apps/details?id=amirz.donation</string>
    <string name="theme_title">Theme</string>
    <string name="pref_open_source_licenses_title">Open source licenses</string>
    <string name="about_donate">Donate</string>
    <string name="title_trigger_rules">Trigger Rules</string>
    <string name="help">Help</string>
    <string name="add_apps">Adding Apps to the Home Screen</string>
    <string name="sounds_title">Sounds</string>
    <string name="manage_profiles_title">Manage Profiles</string>
    <string name="minimal_design_title">Minimal Design</string>
    <string name="other_title">Other</string>
    <string name="other_help_text">If you have any other questions, please feel free to email me. You will find the e-mail address in the instruction PDF that you received by e-mail at the beginning of the study.</string>
    <string name="thanks_help_text">Thank you for your participation!</string>
    <string name="study_id">Study ID</string>
</resources>