<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
            android:key="profiles_screen"
            android:title="@string/profiles"
            android:icon="@drawable/ic_profiles"
            android:persistent="false">

        <PreferenceScreen
                android:key="profile_work"
                android:title="@string/profile_work"
                android:icon="@drawable/ic_profile_work"
                android:persistent="false">

            <!-- NOTE: EditTextPreference accepts EditText attributes. -->
            <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
            <EditTextPreference
                    android:key="work_ssids"
                    android:title="@string/profile_pref_ssids"
                    android:hint="@string/profile_pref_ssids_hint"
                    android:selectAllOnFocus="false"
                    android:inputType="textMultiLine"
            />

            <!-- NOTE: EditTextPreference accepts EditText attributes. -->
            <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
            <!--
            <EditTextPreference
                    android:key="work_wallpaper"
                    android:title="@string/pref_title_wallpaper"
                    android:defaultValue="@string/pref_default_wallpaper"
                    android:selectAllOnFocus="true"
                    android:inputType="textCapWords"
                    android:capitalize="words"
                    android:singleLine="true"
                    android:maxLines="1"
            />
            -->

            <!-- Allows the user to choose a ringtone. -->
            <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
            <RingtonePreference
                    android:key="work_ringtone"
                    android:title="@string/profile_pref_ringtone"
                    android:ringtoneType="notification"
                    android:defaultValue="content://settings/system/notification_sound"/>
            <!-- android:dependency="notifications_new_message" NOTE: This preference will be enabled only when the checkbox above is checked. -->

            <Preference
                    android:key="work_wallpaper"
                    android:title="@string/profile_pref_wallpaper">
                <!--android:defaultValue="@string/pref_default_wallpaper">-->
                <!--<intent
                        android:action="android.intent.action.VIEW"
                        android:targetPackage="my.notifier.ui"
                        android:targetClass="my.notifier.ui.EditCoursesNamesActivity" />
                        -->
            </Preference>

            <!--
            <Preference
                    android:key="work_thumbnail"
                    android:id="@+id/work_thumbnail"
                    android:title="Preview"
                    android:layout="@layout/pref_wallpaper_thumbnail"
            />-->

            <Preference
                    android:persistent="false"
                    android:title="@string/pref_open_source_licenses_title"
                    android:key="open_source_licenses"
                    android:fragment="com.google.android.apps.nexuslauncher.SettingsActivity$OpenSourceLicensesFragment" />

        </PreferenceScreen>

        <PreferenceScreen
                android:key="profile_home"
                android:title="@string/profile_home"
                android:icon="@drawable/ic_profile_home"
                android:persistent="false">

            <!-- NOTE: EditTextPreference accepts EditText attributes. -->
            <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
            <EditTextPreference
                    android:key="home_ssids"
                    android:title="@string/profile_pref_ssids"
                    android:hint="@string/profile_pref_ssids_hint"
                    android:selectAllOnFocus="false"
                    android:inputType="textMultiLine"
            />

            <!-- NOTE: EditTextPreference accepts EditText attributes. -->
            <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
            <!--
            <EditTextPreference
                    android:key="work_wallpaper"
                    android:title="@string/pref_title_wallpaper"
                    android:defaultValue="@string/pref_default_wallpaper"
                    android:selectAllOnFocus="true"
                    android:inputType="textCapWords"
                    android:capitalize="words"
                    android:singleLine="true"
                    android:maxLines="1"
            />
            -->

            <!-- Allows the user to choose a ringtone. -->
            <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
            <RingtonePreference
                    android:key="home_ringtone"
                    android:title="@string/profile_pref_ringtone"
                    android:ringtoneType="ringtone"
                    android:defaultValue="content://settings/system/notification_sound"/>
            <!-- android:dependency="notifications_new_message" NOTE: This preference will be enabled only when the checkbox above is checked. -->

            <Preference
                    android:key="home_wallpaper"
                    android:title="@string/profile_pref_wallpaper">
                <!--android:defaultValue="@string/pref_default_wallpaper">-->
                <!--<intent
                        android:action="android.intent.action.VIEW"
                        android:targetPackage="my.notifier.ui"
                        android:targetClass="my.notifier.ui.EditCoursesNamesActivity" />
                        -->
            </Preference>

            <!--
            <Preference
                    android:key="work_thumbnail"
                    android:id="@+id/work_thumbnail"
                    android:title="Preview"
                    android:layout="@layout/pref_wallpaper_thumbnail"
            />-->

            <Preference
                    android:persistent="false"
                    android:title="@string/pref_open_source_licenses_title"
                    android:key="open_source_licenses"
                    android:fragment="com.google.android.apps.nexuslauncher.SettingsActivity$OpenSourceLicensesFragment" />

        </PreferenceScreen>

        <PreferenceScreen
                android:key="profile_disconnected"
                android:title="@string/profile_disconnected"
                android:summary="Enable by activating airplane mode"
                android:icon="@drawable/ic_profile_disconnected"
                android:persistent="false">

            <!-- NOTE: EditTextPreference accepts EditText attributes. -->
            <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
            <EditTextPreference
                    android:key="disconnected_ssids"
                    android:title="@string/profile_pref_ssids_disconnected"
                    android:summary="@string/profile_pref_ssids_disconnected_summary"
                    android:selectAllOnFocus="false"
                    android:inputType="textMultiLine"
                    android:enabled="false"
            />

            <!-- NOTE: EditTextPreference accepts EditText attributes. -->
            <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
            <!--
            <EditTextPreference
                    android:key="work_wallpaper"
                    android:title="@string/pref_title_wallpaper"
                    android:defaultValue="@string/pref_default_wallpaper"
                    android:selectAllOnFocus="true"
                    android:inputType="textCapWords"
                    android:capitalize="words"
                    android:singleLine="true"
                    android:maxLines="1"
            />
            -->

            <!-- Allows the user to choose a ringtone. -->
            <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
            <RingtonePreference
                    android:key="disconnected_ringtone"
                    android:title="@string/profile_pref_ringtone"
                    android:ringtoneType="notification"
                    android:defaultValue="content://settings/system/notification_sound"/>
            <!-- android:dependency="notifications_new_message" NOTE: This preference will be enabled only when the checkbox above is checked. -->

            <Preference
                    android:key="disconnected_wallpaper"
                    android:title="@string/profile_pref_wallpaper">
                <!--android:defaultValue="@string/pref_default_wallpaper">-->
                <!--<intent
                        android:action="android.intent.action.VIEW"
                        android:targetPackage="my.notifier.ui"
                        android:targetClass="my.notifier.ui.EditCoursesNamesActivity" />
                        -->
            </Preference>

            <!--
            <Preference
                    android:key="work_thumbnail"
                    android:id="@+id/work_thumbnail"
                    android:title="Preview"
                    android:layout="@layout/pref_wallpaper_thumbnail"
            />-->

            <Preference
                    android:persistent="false"
                    android:title="@string/pref_open_source_licenses_title"
                    android:key="open_source_licenses"
                    android:fragment="com.google.android.apps.nexuslauncher.SettingsActivity$OpenSourceLicensesFragment" />

        </PreferenceScreen>

        <PreferenceScreen
                android:key="profile_default"
                android:title="@string/profile_default"
                android:summary="Used if no other profile is enabled"
                android:icon="@drawable/ic_profiles"
                android:persistent="false">

            <!-- NOTE: EditTextPreference accepts EditText attributes. -->
            <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
            <EditTextPreference
                    android:key="default_ssids"
                    android:title="@string/profile_pref_ssids_default"
                    android:summary="@string/profile_pref_ssids_default_summary"
                    android:selectAllOnFocus="false"
                    android:inputType="textMultiLine"
                    android:enabled="false"
            />

            <!-- NOTE: EditTextPreference accepts EditText attributes. -->
            <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
            <!--
            <EditTextPreference
                    android:key="work_wallpaper"
                    android:title="@string/pref_title_wallpaper"
                    android:defaultValue="@string/pref_default_wallpaper"
                    android:selectAllOnFocus="true"
                    android:inputType="textCapWords"
                    android:capitalize="words"
                    android:singleLine="true"
                    android:maxLines="1"
            />
            -->

            <!-- Allows the user to choose a ringtone. -->
            <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
            <RingtonePreference
                    android:key="default_ringtone"
                    android:title="@string/profile_pref_ringtone"
                    android:ringtoneType="notification"
                    android:defaultValue="content://settings/system/notification_sound"/>
            <!-- android:dependency="notifications_new_message" NOTE: This preference will be enabled only when the checkbox above is checked. -->

            <Preference
                    android:key="default_wallpaper"
                    android:title="@string/profile_pref_wallpaper">
                <!--android:defaultValue="@string/pref_default_wallpaper">-->
                <!--<intent
                        android:action="android.intent.action.VIEW"
                        android:targetPackage="my.notifier.ui"
                        android:targetClass="my.notifier.ui.EditCoursesNamesActivity" />
                        -->
            </Preference>

            <!--
            <Preference
                    android:key="work_thumbnail"
                    android:id="@+id/work_thumbnail"
                    android:title="Preview"
                    android:layout="@layout/pref_wallpaper_thumbnail"
            />-->

            <Preference
                    android:persistent="false"
                    android:title="@string/pref_open_source_licenses_title"
                    android:key="open_source_licenses"
                    android:fragment="com.google.android.apps.nexuslauncher.SettingsActivity$OpenSourceLicensesFragment" />

        </PreferenceScreen>

    </PreferenceScreen>

    <com.android.launcher3.views.ButtonPreference
        android:key="pref_icon_badging"
        android:title="@string/icon_badging_title"
        android:persistent="false"
        android:widgetLayout="@layout/notification_pref_warning" >
        <intent android:action="android.settings.NOTIFICATION_SETTINGS">
            <!-- This extra highlights the "Allow icon badges" field in Notification settings -->
            <extra
                android:name=":settings:fragment_args_key"
                android:value="notification_badging" />
        </intent>
    </com.android.launcher3.views.ButtonPreference>

    <SwitchPreference
        android:key="pref_smartspace"
        android:title="@string/smartspace_preferences_in_settings"
        android:summary="@string/smartspace_preferences_in_settings_desc"
        android:defaultValue="true"
        android:persistent="true"
        />

    <SwitchPreference
        android:key="pref_add_icon_to_home"
        android:title="@string/auto_add_shortcuts_label"
        android:summary="@string/auto_add_shortcuts_description"
        android:defaultValue="false"
        android:persistent="true"
        />

    <SwitchPreference
        android:key="pref_enable_minus_one"
        android:title="@string/title_show_google_app"
        android:summary="@string/pref_show_google_now_summary"
        android:defaultValue="false"
        />

    <SwitchPreference
        android:key="pref_show_predictions"
        android:title="@string/title_app_suggestions"
        android:summary="@string/summary_app_suggestions"
        android:defaultValue="true"
        />

    <SwitchPreference
        android:key="pref_allowRotation"
        android:title="@string/allow_rotation_title"
        android:defaultValue="@bool/allow_rotation"
        android:persistent="true"
        />

    <ListPreference
        android:key="pref_override_theme"
        android:title="@string/theme_title"
        android:summary="%s"
        android:entries="@array/theme_override_names"
        android:entryValues="@array/theme_override_values"
        android:defaultValue=""
        android:persistent="true" />

    <ListPreference
        android:key="pref_override_icon_shape"
        android:title="@string/icon_shape_override_label"
        android:summary="%s"
        android:entries="@array/icon_shape_override_paths_names"
        android:entryValues="@array/icon_shape_override_paths_values"
        android:defaultValue=""
        android:persistent="false" />

    <com.google.android.apps.nexuslauncher.CustomIconPreference
        android:key="pref_icon_pack"
        android:title="@string/pref_icon_pack"
        android:summary="%s"
        android:defaultValue=""
        android:persistent="true" />

    <PreferenceScreen
        android:key="about_screen"
        android:title="@string/about"
        android:persistent="false">

        <Preference
            android:key="about_app_version"
            android:title="@string/about_app_version"
            android:persistent="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_releases_url" />
        </Preference>

        <Preference
            android:key="developer"
            android:title="@string/about_donate"
            android:persistent="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_donate_url" />
        </Preference>

        <Preference
            android:key="app_info"
            android:title="@string/app_info_drop_target_label"
            android:persistent="false">
            <intent
                android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
                android:data="package:amirz.rootless.nexuslauncher" />
        </Preference>

        <Preference
            android:persistent="false"
            android:title="@string/pref_open_source_licenses_title"
            android:key="open_source_licenses"
            android:fragment="com.google.android.apps.nexuslauncher.SettingsActivity$OpenSourceLicensesFragment" />

    </PreferenceScreen>

</PreferenceScreen>
