<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/other_help_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/help_margin"
        android:layout_marginTop="@dimen/help_marginTop_title"
        android:layout_marginEnd="@dimen/help_margin"
        android:text="@string/other_title"
        android:textSize="@dimen/help_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/other_help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/help_margin"
        android:layout_marginEnd="@dimen/help_margin"
        android:layout_marginTop="@dimen/help_marginTop_text"
        android:text="@string/other_help_text"
        android:textSize="@dimen/help_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_help_title" />

    <TextView
        android:id="@+id/thanks_help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/help_margin"
        android:layout_marginEnd="@dimen/help_margin"
        android:layout_marginTop="@dimen/help_marginTop_text"
        android:text="@string/thanks_help_text"
        android:textSize="@dimen/help_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_help_text" />

</android.support.constraint.ConstraintLayout>